# ChemTherm

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.cfg
src/chemtherm/: __init__.py  chemeq.py  cp_coefficients.py  critical_constants.py  data.py  database.py  db_formation_reactions.json  dipole_moments.py  elements.py  formation_properties.py  formation_reaction.py  mixture.py  molecular_weight.py  peng_robinson.py  phycons.py  rxn.py  species.py  thermoprops.py  utils.py
src/chemtherm/data/: db_cp.json  db_critical_constants.json  db_dipole_moments.json  db_elements.json  db_formation_properties.json  db_formation_reactions.json  db_heat_capacity.json  db_molecular_weight.json
tests/: examples.py
