[metadata]
name = chemtherm
version = 0.9.0
author = jaortizco
author_email = jaortizco@gmail.com
description = Offer a set of thermodynamic functions
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jaortizco/ChemTherm
project_urls =
    Bug Tracker = https://github.com/jaortizco/ChemTherm/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU GPLv3
    Operating System :: OS Independent

[options]
packages = find:
package_dir =
    = src
include_package_data = True
python_requires = >=3.10

[options.packages.find]
where = src